# ChangeLog for dev-php5/ezc-ConsoleTools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ezc-ConsoleTools/ChangeLog,v 1.21 2010/05/29 18:56:41 mabi Exp $

*ezc-ConsoleTools-1.6.1-r1 (29 May 2010)

  29 May 2010; <mabi@gentoo.org> +ezc-ConsoleTools-1.6.1-r1.ebuild:
  update for php-5.3 USE changes (bug #301159)

*ezc-ConsoleTools-1.6.1 (20 May 2010)

  20 May 2010; Peter Volkov <pva@gentoo.org> +ezc-ConsoleTools-1.6.1.ebuild:
  Version bump, bug #320547

  18 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -ezc-ConsoleTools-1.0.ebuild, -ezc-ConsoleTools-1.1.ebuild,
  -ezc-ConsoleTools-1.1.1.ebuild, -ezc-ConsoleTools-1.1.2.ebuild,
  -ezc-ConsoleTools-1.1.3.ebuild, -ezc-ConsoleTools-1.3.ebuild,
  -ezc-ConsoleTools-1.3.1.ebuild:
  Drop old

*ezc-ConsoleTools-1.3.2 (11 Feb 2008)

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  +ezc-ConsoleTools-1.3.2.ebuild:
  Version bump, from the php overlay

*ezc-ConsoleTools-1.3.1 (13 Jan 2008)

  13 Jan 2008; Markus Ullmann <jokey@gentoo.org>
  +ezc-ConsoleTools-1.3.1.ebuild:
  Add eZ Components 2007.2 from project overlay

  12 Jan 2008; Jakub Moc <jakub@gentoo.org>
  +ezc-ConsoleTools-1.3.1.ebuild:
  Version bump to 2007.2

  08 Oct 2007; Markus Ullmann <jokey@gentoo.org>
  ezc-ConsoleTools-1.3.ebuild:
  Rekeyword sparc per bug #190787 thanks to Tiago Cunha for digging into it

  31 Aug 2007; Jeroen Roovers <jer@gentoo.org> ezc-ConsoleTools-1.3.ebuild:
  Marked ~hppa (bug #190787).

*ezc-ConsoleTools-1.3 (30 Aug 2007)

  30 Aug 2007; Markus Ullmann <jokey@gentoo.org>
  +ezc-ConsoleTools-1.3.ebuild:
  Version bump for eZC 2007.1.1

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  ezc-ConsoleTools-1.1.3.ebuild:
  Add ~alpha + ~ia64 keywords, bug 134717.

*ezc-ConsoleTools-1.1.3 (09 Oct 2006)

  09 Oct 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +ezc-ConsoleTools-1.1.3.ebuild:
  Version bump.
