@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ezc-ConsoleTools/ezc-ConsoleTools-1.6.1-r1.ebuild,v 1.1 2010/05/29 18:56:41 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ezc-ConsoleTools/ezc-ConsoleTools-1.6.1-r1.ebuild,v 1.2 2010/10/14 15:39:27 fauli Exp $
 
 EAPI="2"
 
@@ -9,7 +9,7 @@ inherit php-ezc
 
 DESCRIPTION="This eZ component provides a set of classes to do different actions with the console."
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~sparc ~x86"
+KEYWORDS="~amd64 ~hppa ~sparc x86"
 IUSE=""
 
 DEPEND="|| ( <dev-lang/php-5.3[spl] >=dev-lang/php-5.3 )"
