@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-syck/pecl-syck-0.9.3.ebuild,v 1.1 2010/05/28 22:01:50 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-syck/pecl-syck-0.9.3.ebuild,v 1.2 2010/10/14 15:37:59 fauli Exp $
 
 EAPI="2"
 
@@ -11,7 +11,7 @@ DOCS="CHANGELOG TODO"
 
 inherit php-ext-pecl-r1 depend.php
 
-KEYWORDS="~amd64 ~arm ~ppc ~ppc64 ~x86"
+KEYWORDS="~amd64 ~arm ~ppc ~ppc64 x86"
 
 DESCRIPTION="PHP bindings for Syck - reads and writes YAML with it."
 LICENSE="PHP-3.01"
