@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/ezc-ConsoleTools
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ezc-ConsoleTools/ChangeLog,v 1.21 2010/05/29 18:56:41 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ezc-ConsoleTools/ChangeLog,v 1.22 2010/10/14 15:39:27 fauli Exp $
+
+  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
+  ezc-ConsoleTools-1.6.1-r1.ebuild:
+  x86 stable, bug 336869
 
 *ezc-ConsoleTools-1.6.1-r1 (29 May 2010)
 
